add repository field

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "touch-keyboard",
   "version": "0.1.1",
   "description": "Virtual on-screen keyboard",
+  "repository": "fgnass/touch-keyboard",
   "main": "./dist/index.js",
   "scripts": {
     "start": "cs start",
